--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,36 +88,33 @@
     font-size: 30px;
 }
 
-/* .ajax{
-    display: none;
-} */
 @media screen and (max-width: 700px) {
-    * {
+    /* * {
     padding: 0;
     margin: 0;
     background: black;
-}
+} */
 #wrap {
-    width: 250px;
+    /* width: 250px;
     height: 250px;
-    position: absolute;
-    top: 25%;
+    position: absolute; */
+    /* top: 25%; */
     left: 30%;
-    margin: -125px 0 0 -125px;
+    /* margin: -125px 0 0 -125px; */
 }
 }
 @media screen and (max-width: 550px) {
-    * {
+    /* * {
     padding: 0;
     margin: 0;
     background: black;
-}
+} */
 #wrap {
-    width: 250px;
+    /* width: 250px;
     height: 250px;
-    position: absolute;
-    top: 25%;
+    position: absolute; */
+    /* top: 25%; */
     left: 25%;
-    margin: -125px 0 0 -125px;
+    /* margin: -125px 0 0 -125px; */
 }
 }
