--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     top: 25%;
     left: 40%;
     margin: -125px 0 0 -125px;
-}
+} 
 
 /* canvas {
     display: block;
@@ -63,7 +63,35 @@
 .returnFromRule{
     top: 150%;
 }
-
+.inputName{
+    position: absolute;
+    color: orange;
+    background-color: transparent;
+    top: 70%;
+    left: 28%;
+    font-size: 30px;
+    text-align: center;
+}
+.inputName::placeholder{
+    color: whitesmoke;
+    opacity: 0.1;
+}
+.btnSave{
+    width: 180px;
+    /* height: 250px; */
+    font-size: 30px;
+    color: orange;
+    /* background-color: white; */
+    position: absolute;
+    left: 160px;
+    top: 92%;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    text-align: center;
+}
 .resultStyle {
     left: 60%;
     position: absolute;
@@ -98,7 +126,7 @@
     /* width: 250px;
     height: 250px;
     position: absolute; */
-    /* top: 25%; */
+    top: 25%;
     left: 30%;
     /* margin: -125px 0 0 -125px; */
 }
@@ -113,7 +141,7 @@
     /* width: 250px;
     height: 250px;
     position: absolute; */
-    /* top: 25%; */
+    top: 25%;
     left: 25%;
     /* margin: -125px 0 0 -125px; */
 }
